app/javascript/styles/mastodon/components.scss
/* ... */
.notification-group--unread,
.notification-ungrouped--unread {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    width: 100%;
    height: 100%;
    border-inline-start: 4px solid var(--color-border-brand);
    pointer-events: none;
  }
}

.hover-card-controller[data-popper-reference-hidden='true'] {
  opacity: 0;
  pointer-events: none;
}

.hover-card {
  box-shadow: var(--dropdown-shadow);
  background: var(--color-bg-primary);
  backdrop-filter: $backdrop-blur-filter;
  border: 1px solid var(--color-border-primary);
  border-radius: 8px;
  padding: 16px;
  width: 270px;
  display: flex;
  flex-direction: column;
  gap: 12px;

  &--loading {
    position: relative;
    min-height: 100px;
  }

  &__name {
    display: flex;
    gap: 12px;
    text-decoration: none;
    color: inherit;
  }

  &__numbers,
  &__familiar-followers {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 2px 10px;
  }

  &__numbers {
    font-size: 15px;
    line-height: 22px;
    color: var(--color-text-primary);

    strong {
      font-weight: 700;
    }
  }

  &__text-row {
    display: flex;
    flex-direction: column;
    gap: 8px;
  }

  &__bio {
    color: var(--color-text-primary);
    font-size: 14px;
    line-height: 20px;
    display: -webkit-box;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    max-height: 2 * 20px;
    overflow: hidden;
    overflow-wrap: anywhere;

    p {
      margin-bottom: 0;
    }

    a {
      color: inherit;
      text-decoration: underline;

      &:hover,
      &:focus,
      &:active {
        text-decoration: none;
      }
    }
  }

  &__note {
    &-label {
      color: var(--color-text-tertiary);
      font-size: 12px;
      font-weight: 500;
      text-transform: uppercase;
    }

    dd {
      white-space: pre-line;
      color: var(--color-text-primary);
      overflow: hidden;
      line-clamp: 3; // Not yet supported in browers
      display: -webkit-box; // The next 3 properties are needed
      -webkit-line-clamp: 3;
      -webkit-box-orient: vertical;
    }
  }

  &__limited-account-note {
    text-align: center;
    font-weight: 500;
  }

  .display-name {
    font-size: 15px;
    line-height: 22px;

    bdi {
      font-weight: 500;
      color: var(--color-text-primary);
    }

    &__account {
      display: block;
      color: var(--color-text-tertiary);
    }
  }

  .account-fields {
    color: var(--color-text-primary);
    font-size: 14px;
    line-height: 20px;

    a {
      color: inherit;
      text-decoration: none;

      &:focus,
      &:hover,
      &:active {
        text-decoration: underline;
      }
    }

    dl {
      display: flex;
      align-items: center;
      gap: 4px;

      dt {
        flex: 0 1 auto;
        color: var(--color-text-tertiary);
        min-width: 0;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
      }

      dd {
        flex: 1 1 auto;
        font-weight: 500;
        min-width: 0;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        text-align: end;
      }

      &.verified {
        dd {
          display: flex;
          align-items: center;
          justify-content: flex-end;
          gap: 4px;
          overflow: hidden;
          white-space: nowrap;
          color: var(--color-text-success);

          & > span {
            overflow: hidden;
            text-overflow: ellipsis;
          }

          a {
            font-weight: 500;
          }

          .icon {
            width: 16px;
            height: 16px;
          }
        }
      }
    }
  }
}

.content-warning {
  display: block;
  box-sizing: border-box;
  color: var(--color-text-primary);
  background: var(--color-bg-brand-softest);
  border: 1px solid var(--color-border-brand-soft);
  border-radius: 8px;
  padding: 8px (5px + 8px);
  position: relative;
  font-size: 15px;
  line-height: 22px;
  cursor: pointer;

  p {
    margin-bottom: 8px;
    font-weight: 500;
  }

  .link-button {
    font-size: inherit;
    line-height: inherit;
    font-weight: 500;
  }

  &--filter {
    color: var(--color-text-secondary);

    p {
      font-weight: normal;
    }

    .filter-name {
      font-weight: 500;
      color: var(--color-text-primary);
    }
  }
}

.lists__item {
  display: flex;
  align-items: center;
  gap: 16px;
  padding-inline-end: 13px;
  border-bottom: 1px solid var(--color-border-primary);

  &__title {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 16px 13px;
    flex: 1 1 auto;
    font-size: 16px;
    line-height: 24px;
    color: var(--color-text-secondary);
    text-decoration: none;

    &:is(a):hover,
    &:is(a):focus,
    &:is(a):active {
      color: var(--color-text-primary);
    }

    input {
      display: block;
      width: 100%;
      background: transparent;
      border: 0;
      padding: 0;
      font-family: inherit;
      font-size: inherit;
      line-height: inherit;
      color: inherit;

      &::placeholder {
        color: var(--color-text-secondary);
        opacity: 1;
      }

      &:focus {
        outline: 0;
      }
    }
  }
}

.column-search-header {
  display: flex;
  gap: 12px;
  align-items: center;
  border: 1px solid var(--color-border-primary);
  border-top: 0;
  border-bottom: 0;
  padding: 16px;
  padding-bottom: 8px;

  input {
    background: var(--color-bg-secondary);
    border: 1px solid var(--color-border-primary);
    color: var(--color-text-primary);
    padding: 12px;
    font-size: 16px;
    line-height: normal;
    border-radius: 4px;
    display: block;
    flex: 1 1 auto;

    &::placeholder {
      color: var(--color-text-secondary);
      opacity: 1;
    }

    &:focus {
      outline: 0;
    }
  }
}

.column-footer {
  padding: 16px;
  position: sticky;
  bottom: 0;
  background: var(--color-bg-primary);
}
/* ... */

