Fix bio text overflow on account profile page

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10767,7 +10767,6 @@ noscript {
     -webkit-box-orient: vertical;
     max-height: 2 * 20px;
     overflow: hidden;
-    overflow-wrap: anywhere;
 
     p {
       margin-bottom: 0;
